crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_003.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 38
payload:
  Invalid:
    message: "Cut(RpcValueParseFailed { method: \"BasePlayerCreate::spaID\", argnum: 1, argtype: \"Property { name: \\\"spaID\\\", prop_type: Primitive(Int64), flags: BaseAndClient }\", error: \"Parse(Backtrack(ContextError { context: [], cause: None }))\" })"
    raw:
      - 16
      - 135
      - 18
      - 0
      - 3
      - 0
      - 0
      - 0
      - 0
      - 0
