crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_014.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 8
payload:
  OnGameRoomStateChanged:
    player_states:
      - id: 939869290
        isConnected: true
